--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,37 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
+}
+
+/*  navbar    */
+
+.navbar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: grey;
+    position: sticky;
+    top: 0;
+}
+.navbar .ul{
+    display: flex;
+    list-style: none;
+    margin: 20px 0px;
+}
+.navbar .ul li{
+    font-family: sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+}
+.navbar .ul li a{
+    text-decoration: none;
+    color: white;
+    padding: 8px 25px;
+    transition: 1.5s;
+}
+.navbar .ul li a:hover{
+    background-color: aqua;
+    color: black;
+    box-shadow: 0 0 10px white;
 }
